[metadata]
name = GiraffeTimer
version = 0.0.1
author = Elliott D
author_email = topiatowersofficial@gmail.com
description = Simple Python Timer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Giraffe32/Timer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False